Removing dependency to bootstrap.conf

--- a/arbiter/Dockerfile
+++ b/arbiter/Dockerfile
@@ -5,7 +5,7 @@ MAINTAINER Massimo Santini "santini@di.unimi.it"
 ENV DEBIAN_FRONTEND noninteractive
 
 RUN \
-	apt-get update && apt-get install -qy libevent-1.4 realpath && \
+	apt-get update && apt-get install -qy libevent-1.4 realpath docker.io && \
 	pip install gunicorn gevent flask && \
 	rm -rf /var/lib/apt/lists/*
 
