--- a/arbiter/Dockerfile
+++ b/arbiter/Dockerfile
@@ -6,7 +6,16 @@ ENV DEBIAN_FRONTEND noninteractive
 
 RUN apt-get update
 
-RUN apt-get install -qy libevent-1.4 realpath docker.io
+RUN apt-get install -qy libevent-1.4 realpath apt-transport-https
+
+RUN echo deb https://get.docker.com/ubuntu docker main > /etc/apt/sources.list.d/docker.list
+
+RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 \
+		--recv-keys 36A1D7869245C8950F966E92D8576A8BA88D21E9
+
+RUN apt-get update
+
+RUN apt-get install -y lxc-docker
 
 RUN pip install gunicorn gevent flask
 
